--- a/_includes/_slidehead.html
+++ b/_includes/_slidehead.html
@@ -5,12 +5,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/remark.css" media="screen">
 <style type="text/css">
-    {% if page.fancyfonts or site.fancyfonts %}/* different font family */
+    {% if page.fancyfonts == true or site.fancyfonts == true %}/* different font family */
     @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
     @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
     body { font-family: 'Droid Serif'; }{% endif %}
     h1, h2, h3, h4, h5, h6 {
-        {% if page.fancyfonts or site.fancyfonts %}font-family: 'Yanone Kaffeesatz';{% endif %}
+        {% if page.fancyfonts == true or site.fancyfonts == true %}font-family: 'Yanone Kaffeesatz';{% endif %}
         font-weight: normal;
         color: #c7254e;
     }
