--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -29,8 +29,12 @@
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
                 <li><a href="{{ site.baseurl }}/tutorials/">Tutorials</a></li>
+                <li><a href="https://github.com/datacloning/dcexamples/">Examples</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
+                <li><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
                 <li><a href="{{ site.baseurl }}/talks.html">Talks</a></li>
+                <li><a href="{{ site.baseurl }}/faq.html">FAQ</a></li>
+            	<li><a href="{{ site.baseurl }}/issues.html">Issues</a></li>
               </ul>
             </li>
             <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
