--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -27,7 +27,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="resources">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
-                <li><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
+                <li><a href="{{ site.baseurl }}/documentation.html">Documentation</a></li>
                 <li><a href="{{ site.baseurl }}/tutorials/">Tutorials</a></li>
                 <li><a href="https://github.com/datacloning/dcexamples/">Examples</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
