--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -16,9 +16,9 @@
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <!-- <li><a href="{{ site.baseurl }}/dc.html">Inroduction</a></li>
                 <li><a href="{{ site.baseurl }}/install.html">Installation</a></li>
-                <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li> -->
+                <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
                 <li class="divider"></li>
-                <li class="dropdown-header">R packages</li>
+                <li class="dropdown-header">R packages</li> -->
                 <li><a href="https://github.com/datacloning/dclone">dclone</a></li>
                 <li><a href="https://github.com/datacloning/dcmle">dcmle</a></li>
                 <li><a href="https://github.com/datacloning/dcextras">dcextras</a></li>
