--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -8,7 +8,7 @@
 <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap.css" media="screen"> -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/{{ theme }}/bootstrap.min.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/highlight.default.min.css">
+<!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/highlight.default.min.css">
 <script src="{{ site.baseurl }}/assets/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script>
@@ -17,7 +17,7 @@
             hljs.highlightBlock(block);
         });
     });
-</script>
+</script> -->
 <script type="text/javascript"
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
@@ -53,4 +53,3 @@
     }
 </style>
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
-<link rel="stylesheet" href="https://github.com/gvwilson/using-jekyll/blob/gh-pages/css/swc.css">
