--- a/_layouts/raw.html
+++ b/_layouts/raw.html
@@ -16,13 +16,8 @@
                     <h1 class="title">{{ page.title }}</h1>
                 {% endif %}
             {% endif %}
-            <pre><code>
-<!-- content starts here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
-
-            {{ content }}
-
-<!-- content ends here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
-            </code></pre>
+<pre><code>{{ content }}
+</code></pre>
         </div>
     </div>
 </div>
