--- a/_layouts/raw.html
+++ b/_layouts/raw.html
@@ -16,8 +16,7 @@
                     <h1 class="title">{{ page.title }}</h1>
                 {% endif %}
             {% endif %}
-<pre><code>{{ content }}
-</code></pre>
+<pre><code>{{ content }}</code></pre>
         </div>
     </div>
 </div>
