--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -18,6 +18,10 @@
         });
     });
 </script> -->
+<script>
+    $(".entry").html(($(".entry").html().replace("<em>{","_{")))
+    $(".entry").html(($(".entry").html().replace("</em>{","_{")))
+</script>
 <script type="text/javascript"
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
