--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -10,11 +10,11 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
         {% if page.course %}
-            <h3><em>{{ page.course.title }}</em></h3>
+            <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/"><h3><em>{{ page.course.title }}</em></h3></a>
             <ul class="breadcrumb">
                 <li><a href="{{ site.baseurl }}">Home</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
-                <li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location }}/">{{ page.course.location }} {{ page.course.year }}</a></li>
+                <li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/">{{ page.course.location }} {{ page.course.year }}</a></li>
                 <li class="active">{{ page.course.lecture }}</li>
             </ul>                
             <h1 class="title">{{ page.title }}</h1>
