--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -24,6 +24,18 @@
             {{ content }}
 
 <!-- content ends here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
+            <ul class="pager">
+                {% if page.course.previous %}
+                <li class="previous"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.previous }}.html"><i class="fa fa-chevron-left"></i> Previous</a></li>
+                {% else %}
+                <li class="previous disabled"><a href="#"><i class="fa fa-chevron-left"></i> Previous</a></li>
+                {% endif %}
+                {% if page.course.previous %}
+                <li class="next"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.previous }}.html">Next <i class="fa fa-chevron-right"></i></a></li>
+                {% else %}
+                <li class="next disabled"><a href="#">Next <i class="fa fa-chevron-right"></i></a></li>
+                {% endif %}
+            </ul>
         </div>
     </div>
 </div>
