--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -30,7 +30,7 @@
                 {% else %}
                 <li class="previous disabled"><a href="#"><i class="fa fa-chevron-left"></i> Previous</a></li>
                 {% endif %}
-                {% if page.course.previous %}
+                {% if page.course.next %}
                 <li class="next"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.previous }}.html">Next <i class="fa fa-chevron-right"></i></a></li>
                 {% else %}
                 <li class="next disabled"><a href="#">Next <i class="fa fa-chevron-right"></i></a></li>
