--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -12,7 +12,7 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="results">Software <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="results">Toolkit <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <!-- <li><a href="{{ site.baseurl }}/dc.html">Inroduction</a></li>
                 <li><a href="{{ site.baseurl }}/install.html">Installation</a></li>
@@ -33,12 +33,19 @@
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
                 <li><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
                 <li><a href="{{ site.baseurl }}/talks.html">Talks</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="resources">Help <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="{{ site.baseurl }}/faq.html">FAQ</a></li>
                 <li><a href="{{ site.baseurl }}/forum.html">Forum</a></li>
             	<li><a href="{{ site.baseurl }}/issues.html">Issues</a></li>
               </ul>
             </li>
-            <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
+              <ul class="nav navbar-nav navbar-right">
+               <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
+             </ul>
            </ul>
         </div>
       </div>
