--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -7,18 +7,46 @@
 <body>
 {% include _navigation.html %}
 <div class="container">
+{% if page.course %}
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-        {% if page.course %}
+        <div class="col-md-6 col-md-offset-1">
             <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/"><h3><em>{{ page.course.title }}</em></h3></a>
+        </div>
+        <div class="col-md-4">
+
+<ul class="nav nav-pills">
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="#">Profile</a></li>
+  <li class="disabled"><a href="#">Disabled</a></li>
+  <li class="dropdown open">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
+      Download <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="#">html</a></li>
+      <li><a href="#">PDF</a></li>
+      <li><a href="#">Rnw</a></li>
+    </ul>
+  </li>
+</ul>
+
+        </div>
+        <div class="col-md-10 col-md-offset-1">
             <ul class="breadcrumb">
                 <li><a href="{{ site.baseurl }}">Home</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
                 <li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/">{{ page.course.location }} {{ page.course.year }}</a></li>
                 <li class="active">{{ page.course.lecture }}</li>
             </ul>
+		</div>
+	</div>
+    <div class="row">
+    	<div class="col-md-10 col-md-offset-1">
             <h1 class="title">{{ page.title }}</h1>
-        {% endif %}
+{% else %}
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+{% endif %}
 <!-- content starts here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 
             {{ content }}
