--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -9,29 +9,15 @@
 <div class="container">
 {% if page.course %}
     <div class="row">
-        <div class="col-md-6 col-md-offset-1">
-            <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/"><h3><em>{{ page.course.title }}</em></h3></a>
-        </div>
-        <div class="col-md-4">
-
-<ul class="nav nav-pills">
-  <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Profile</a></li>
-  <li class="disabled"><a href="#">Disabled</a></li>
-  <li class="dropdown open">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
-      Download <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a href="#">html</a></li>
-      <li><a href="#">PDF</a></li>
-      <li><a href="#">Rnw</a></li>
-    </ul>
-  </li>
-</ul>
-
-        </div>
         <div class="col-md-10 col-md-offset-1">
+            <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/"><h3><em>{{ page.course.title }}</em></h3></a>
+
+<span class="pull-right">
+	<span class="label label-default">html</span>
+	<span class="label label-default">pdf</span>
+	<span class="label label-default">Rmd</span>
+</span>
+
             <ul class="breadcrumb">
                 <li><a href="{{ site.baseurl }}">Home</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
