--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -12,12 +12,15 @@
         <div class="col-md-10 col-md-offset-1">
             <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/"><h3><em>{{ page.course.title }}</em></h3></a>
 
-<span class="pull-right">
-	<span class="label label-default">html</span>
-	<span class="label label-default">pdf</span>
-	<span class="label label-default">Rmd</span>
-</span>
-
+			<span class="pull-right">
+				<span class="label label-default"><a href="#">html</a></span>
+				<span class="label label-default"><a href="#">pdf</a></span>
+				<span class="label label-default"><a href="#">Rmd</a></span>
+			</span>
+		</div>
+	</div>
+    <div class="row">
+		<div class="col-md-10 col-md-offset-1">
             <ul class="breadcrumb">
                 <li><a href="{{ site.baseurl }}">Home</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
