--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -13,9 +13,18 @@
             <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/"><h3><em>{{ page.course.title }}</em></h3></a>
 
 			<span class="pull-right">
-				<span class="label label-default"><a href="#">html</a></span>
-				<span class="label label-default"><a href="#">pdf</a></span>
-				<span class="label label-default"><a href="#">Rmd</a></span>
+<ul class="nav nav-pills">
+  <li class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+      Dropdown <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="#">html</a></li>
+      <li><a href="#">pdf</a></li>
+      <li><a href="#">Rnw</a></li>
+    </ul>
+  </li>
+</ul>
 			</span>
 		</div>
 	</div>
