--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -11,21 +11,6 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
             <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/"><h3><em>{{ page.course.title }}</em></h3></a>
-
-			<span class="pull-right">
-<ul class="nav nav-pills">
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-      Dropdown <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a href="#">html</a></li>
-      <li><a href="#">pdf</a></li>
-      <li><a href="#">Rnw</a></li>
-    </ul>
-  </li>
-</ul>
-			</span>
 		</div>
 	</div>
     <div class="row">
@@ -36,6 +21,20 @@
                 <li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/">{{ page.course.location }} {{ page.course.year }}</a></li>
                 <li class="active">{{ page.course.lecture }}</li>
             </ul>
+			<span class="pull-right">
+<ul class="nav nav-pills">
+  <li class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+      Download <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="#">html</a></li>
+      <li><a href="#">pdf</a></li>
+      <li><a href="#">Rnw</a></li>
+    </ul>
+  </li>
+</ul>
+			</span>
 		</div>
 	</div>
     <div class="row">
