--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -15,18 +15,17 @@
         <div class="col-md-2">
 
 			<span class="pull-right">
-<ul class="nav nav-pills">
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-      Download <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a href="#">html</a></li>
-      <li><a href="#">pdf</a></li>
-      <li><a href="#">Rnw</a></li>
-    </ul>
-  </li>
-</ul>
+    		  <div class="btn-group">
+      			<a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+		        Download
+        		<span class="caret"></span>
+      			</a>
+      			<ul class="dropdown-menu">
+        			<li><a href="#">html</a></li>
+        			<li><a href="#">pdf</a></li>
+        			<li><a href="#">Rmd</a></li>
+       			</ul>
+    		  </div>
 			</span>
 
 		</div>
