--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -53,13 +53,13 @@
             <ul class="pager">
                 {% if page.course.previous %}
                 <li class="previous"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.previous }}.html"><i class="fa fa-chevron-left"></i> Previous</a></li>
-                {% else %}
-                <li class="previous disabled"><a href="#"><i class="fa fa-caret-left"></i> Previous</a></li>
+                <!-- {% else %}
+                <li class="previous disabled"><a href="#"><i class="fa fa-caret-left"></i> Previous</a></li> -->
                 {% endif %}
                 {% if page.course.next %}
                 <li class="next"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.next }}.html">Next <i class="fa fa-chevron-right"></i></a></li>
-                {% else %}
-                <li class="next disabled"><a href="#">Next <i class="fa fa-caret-right"></i></a></li>
+                <!-- {% else %}
+                <li class="next disabled"><a href="#">Next <i class="fa fa-caret-right"></i></a></li> -->
                 {% endif %}
             </ul>
         </div>
