--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -3,9 +3,9 @@
     <div class="col-md-8 col-md-offset-2">
       <footer>
       <hr>
-      <p><small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</small></p>
-      <p><small>Last updated: {{ site.time | date: "%Y-%m-%d" }}. Maintained by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.</small></p>
-      <p><small>Powered by <a href="http://jekyllrb.com">Jekyll</a> using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://bootswatch.com/">Bootswatch</a>. Source code hosted on <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.</small></p>
+      <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
+      <small>Powered by <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://bootswatch.com/">Bootswatch</a>, and <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.
+      Last updated on {{ site.time | date: "%Y-%m-%d" }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a></small></p>
       </footer>
     </div>
   </div>
