--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -29,7 +29,7 @@
 			{% if page.course.file %}
 			<span class="pull-right">
 			  <div class="btn-group">
-			    <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/slides-{{ page.course.file }}.html" class="btn btn-default">Slides</a>
+			    <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/slides-{{ page.course.file }}.html" class="btn btn-primary btn-sm">Slides</a>
     		    <div class="btn-group">
       			  <a href="#" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
 		          Download
