--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -36,9 +36,9 @@
         		  <span class="caret"></span>
       			  </a>
       			  <ul class="dropdown-menu">
-        			<li><a href="{{ page.url }}" download>html</a></li>
-        			<li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.pdf" download>pdf</a></li>
-        			<li><a href="https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.Rmd" download>Rmd</a></li>
+        			<li><a href="{{ page.url }}" download><i class="fa fa-file-text-o"></i> html</a></li>
+        			<li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.pdf" download><i class="fa fa-file-pdf-o"></i> pdf</a></li>
+        			<li><a href="https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.Rmd" download><i class="fa fa-file-code-o"></i> Rmd</a></li>
        			  </ul>
     		    </div>
     		  </div>
