--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -8,7 +8,7 @@
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.      
       <br />
       Powered by <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://bootswatch.com/">Bootswatch</a>, and <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.
-      <br />
+      &mdash;
       Last updated on {{ site.time | date: "%Y-%m-%d" }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.
       </small></p>
       </footer>
