--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -29,15 +29,22 @@
 			{% if page.course.file %}
 			<span class="pull-right">
 			  <div class="btn-group">
-			    <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/slides-{{ page.course.file }}.html" class="btn btn-primary btn-sm">Slides</a>
+                {% if page.course.slides %}
+			    <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.slides }}" class="btn btn-primary btn-sm"><i class="fa fa-laptop"></i> Slides</a>
+    		    {% endif %}
+                {% if page.course.pdf %}
+			    <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.pdf }}" class="btn btn-primary btn-sm"><i class="fa fa-file-pdf-o"></i> pdf</a>
+    		    {% endif %}
     		    <div class="btn-group">
       			  <a href="#" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-		          Download
+		          <i class="fa fa-download"></i> Download
         		  <span class="caret"></span>
       			  </a>
       			  <ul class="dropdown-menu">
         			<li><a href="{{ page.url }}" download><i class="fa fa-file-text-o"></i> html</a></li>
+        			{% if page.course.pdf %}
         			<li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.pdf" download><i class="fa fa-file-pdf-o"></i> pdf</a></li>
+        			{% endif %}
         			<li><a href="https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.Rmd" download><i class="fa fa-file-code-o"></i> Rmd</a></li>
        			  </ul>
     		    </div>
