--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,7 +27,7 @@
 <script>
 var disqus_config = function () {
   this.page.url = {{ page.url }};
-  this.page.identifier = {{ page.title | replace: ' ', '_' }};
+  this.page.identifier = {{ page.title | slugify }};
 };
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
