--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -16,6 +16,10 @@
                 {% else %}
                     <h1 class="title">{{ page.title }}</h1>
                 {% endif %}
+            <span class="pull-right">
+              <p>Posed on {{ post.date | date: '%B %d, %Y' }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a></p>
+            </span>
+
             {% endif %}
 <!-- content starts here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 
