--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,7 +17,7 @@
                     <h1 class="title">{{ page.title }}</h1>
                 {% endif %}
             <span class="pull-right">
-              <p>Posed on {{ post.date | date: '%B %d, %Y' }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a></p>
+              <p>Posed on {{ page.date | date: '%B %d, %Y' }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a></p>
             </span>
 
             {% endif %}
