--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,6 +9,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
+            <span class="pull-right">
+            <p><small>Posed on {{ page.date | date: '%B %d, %Y' }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a></small></p>
+            </span>
             {% if page.title %}
                 {% if page.subtitle %}
                     <a href="index.html"><h1 class="title">{{ page.title }}</h1></a>
@@ -16,10 +19,6 @@
                 {% else %}
                     <h1 class="title">{{ page.title }}</h1>
                 {% endif %}
-            <span class="pull-right">
-              <p>Posed on {{ page.date | date: '%B %d, %Y' }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a></p>
-            </span>
-
             {% endif %}
 <!-- content starts here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 
